@@ -6,7 +6,6 @@ xmp - Extended Module Player
 .SH "SYNOPSIS" 
 \fBxmp\fP
 [\fB-8, --8bit\fP]
-[\fB--big-endian\fP]
 [\fB-b, --bits\fP \fIbits\fP]
 [\fB-c, --stdout\fP]
 [\fB--chorus\fP \fIdepth\fP]
@@ -18,7 +17,6 @@ xmp - Extended Module Player
 [\fB-i, --interpolate\fP]
 [\fB--load-only\fP]
 [\fB-l, --loop\fP]
-[\fB--little-endian\fP]
 [\fB-M, --mute\fP \fIchannel-list\fP]
 [\fB-m, --mono\fP]
 [\fB--nocmd\fP]
@@ -57,9 +55,6 @@ to a file\&.
 Convert 16 bit samples to 8 bit\&. You may want to use this mode to
 save memory in the sound device (AWE cards will ignore this mode and
 always work with 16 bit samples)\&.
-.IP "\fB--big-endian\fP" 
-Tell the software mixer to generate big-endian 16-bit samples
-(default is the machine byte ordering)\&.
 .IP "\fB-b, --bits\fP \fIbits\fP" 
 Set the software mixer resolution (8 or 16 bits)\&. If ommited,
 The audio device will be opened at the highest resolution available\&.
@@ -87,9 +82,6 @@ Enable or disable the software mixer interpolation routines\&.
 Exit after loading the module&.
 .IP "\fB-l, --loop\fP" 
 Enable module looping and backward pattern jumps\&.
-.IP "\fB--little-endian\fP" 
-Tell the software mixer to generate little-endian 16-bit samples
-(default is the machine byte ordering)\&.
 .IP "\fB-M, --mute\fP \fIchannel-list\fP" 
 Mute the specified channels\&. \fIchannel-list\fP is a comma-separated
 list of decimal channel ranges\&. Example: 0,2-4,8-16\&.
@@ -187,6 +179,12 @@ is the internal speaker\&.
 .IP "\fB-Dbuffer=\fP\fIsize\fP" 
 Set the size in bytes of the audio buffer\&. The default value is 32 Kb\&.
 .PP 
+File output:
+.IP "\fB--Dbig-endian\fP" 
+Generate big-endian 16-bit samples (default is the machine byte ordering)\&.
+.IP "\fB--Dlittle-endian\fP" 
+Generate little-endian 16-bit samples (default is the machine byte ordering)\&.
+.PP
 .SH "INTERACTIVE COMMANDS" 
 The following single key commands can be used when playing modules:
 .IP "\fBq\fP" 
